[improvement](chat|common|headless|launcher|webapp) Code upgrades and MyBatis-Plus migration
Migrate XML-based MyBatis mappers to annotation-based MyBatis-Plus
across chat, common, and headless modules. Upgrade code quality with
deprecated API replacements, JSqlParser/Calcite improvements, and
HanLP dictionary optimizations. Update frontend UI, build configs,
demo data, and documentation.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>